--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="3D печать в иркутске по доступным ценам"
     />
-    <title>3DPrint</title>
+    <title>Strezhen</title>
     <style>
       .preloader-site { 
           height: 50vh; 
