--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
     <meta name="theme-color" content="#0771b8">
     <link rel="apple-touch-icon" href="./icon-192x192.png">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <link rel="preload" href="../fonts/Nunito-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../fonts/Nunito-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../fonts/Nunito-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../fonts/Nunito-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../fonts/Nunito-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
     <meta
       name="description"
       content="3D печать в иркутске по доступным ценам"
