--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://devback.net:5000">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0771b8" />
     <link rel="manifest" crossorigin="use-credentials" href="./manifest.json"/>
@@ -10,11 +11,11 @@
     <meta name="theme-color" content="#0771b8">
     <link rel="apple-touch-icon" href="./icon-192x192.png">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link rel="preload" href="../fonts/Nunito-Regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="../fonts/Nunito-Medium.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="../fonts/Nunito-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="../fonts/Nunito-Bold.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="../fonts/Nunito-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../assets/fonts/Nunito-Regular-subset.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../assets/fonts/Nunito-Medium-subset.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../assets/fonts/Nunito-SemiBold-subset.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../assets/fonts/Nunito-Bold-subset.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="../assets/fonts/Nunito-ExtraBold-subset.woff2" as="font" type="font/woff2" crossorigin>
     <meta
       name="description"
       content="3D печать в иркутске по доступным ценам"
