new blockeselector and blockinput added

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="preload" href="../assets/fonts/Nunito-ExtraBold-subset.woff2" as="font" type="font/woff2" crossorigin>
     <meta
       name="description"
-      content="3D печать в иркутске по доступным ценам"
+      content="3D printing company Strezhen. Print everything you can imagine."
     />
     <title>Strezhen</title>
     <style>
